@@ -47,6 +47,7 @@
     * FIX: flexible notification valuespec is now localizable
     * FIX: Alias values of host/service/contact groups need to be set and unique
            within the group
+    * FIX: Fixed exception when editing contactgroups without alias
     * Suggest use default value for filesystem levels that make sense
     * Valuespec: CascadingDropdown now able to process choice values from functions
     * Freshness checking for classical passive Nagios checks (custom_checks)
